UX: Add styling to notification

--- a/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
+++ b/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
@@ -1,3 +1,3 @@
-<div class="custom-notification">
+<div class="custom-notification wrap">
   <h3><strong>Reminder:</strong> This is an example notification message</h3>
 </div>
