--- a/common/common.scss
+++ b/common/common.scss
@@ -5,6 +5,10 @@
   border-left: 0.375rem solid var(--danger);
   border-radius: 0.325rem;
 
+  svg {
+    color: var(--danger);
+  }
+
   h3 {
     margin-bottom: 0;
     font-weight: 300;
