DEV: Change notification message to a localizable string

--- a/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
+++ b/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
@@ -4,6 +4,6 @@
     <strong>
       Reminder:
     </strong>
-    This is an example notification message
+    {{theme-i18n "notification_message"}}
   </h3>
 </div>
