FEATURE: Setting to change notification type

--- a/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
+++ b/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
@@ -2,7 +2,7 @@
   <h3>
     {{d-icon "bell"}}
     <strong>
-      Reminder:
+      {{theme-setting "notification_type"}}
     </strong>
     {{theme-i18n "notification_message"}}
   </h3>
