--- a/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
+++ b/javascripts/discourse/connectors/below-site-header/notification-banner.hbs
@@ -7,3 +7,16 @@
     {{theme-i18n "notification_message"}}
   </h3>
 </div>
+
+<div class="custom-notification-content wrap">
+  <h3>
+    Badges:
+  </h3>
+  <ul>
+    {{#each badges as |badge|}}
+      <li>
+        {{badge.name}}
+      </li>
+    {{/each}}
+  </ul>
+</div>
